# prometheus-smart-collector

./: .gitignore  LICENSE  README.md  prometheus_smart_collector.py  pyproject.toml
systemd/: prometheus-smart-collector.service  prometheus-smart-collector.timer
